<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Views.AdvancedSearchActivity">

    <TextView
        android:id="@+id/adv_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/adv_search_title"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/adv_search_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/adv_search_title"
        android:hint="@string/adv_search_edit_hint" />

    <TextView
        android:id="@+id/adv_search_file_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/adv_search_edit"
        android:text="@string/adv_search_file_type_title"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/adv_search_file_type_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/adv_search_file_type_title" />
    <!-- spinner for file types
    <Spinner
        android:id="@+id/adv_search_file_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/adv_search_file_type_title"></Spinner>
    -->

    <TextView
        android:id="@+id/adv_search_tag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/adv_search_file_type_edit"
        android:text="@string/adv_search_tag_title"
        android:textSize="15dp"
        android:textStyle="bold"/> <!-- layout_below need to be changed -->

    <EditText
        android:id="@+id/adv_search_tag_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/adv_search_tag_title" />
    <!-- spinner for tag
    <Spinner
        android:id="@+id/adv_search_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/adv_search_tag_title"></Spinner>
    -->

    <TextView
        android:id="@+id/adv_search_access_group_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/adv_search_tag_edit"
        android:text="@string/adv_search_access_group_title"
        android:textSize="15dp"
        android:textStyle="bold"/> <!-- layout_below needs to be changed -->

    <EditText
        android:id="@+id/adv_search_access_group_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/adv_search_access_group_title" />

    <!-- Spinner for access group
    <Spinner
        android:id="@+id/adv_search_access_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/adv_search_access_group_title"></Spinner>
    -->

    <Button
        android:id="@+id/adv_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/adv_search_access_group_edit"
        android:text="@string/adv_search_button"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#eceeed"
        android:background="#4a54bc"
        android:onClick="searchButtonOnClick"/> <!-- layout_below need be changed -->


</RelativeLayout>
